# lasertime

./: notes.txt  play.py  prompts.txt  pyproject.toml  readme.md
lasertime/: db.sqlite3  manage.py
lasertime/lasertime/: asgi.py  settings.py  urls.py  wsgi.py
lasertime/quotes/: admin.py  forms.py  models.py  svg_processing.py  urls.py  views.py
lasertime/quotes/migrations/: 0001_initial.py  0002_cuttingmethod.py  0003_delete_cuttingmethod.py
lasertime/quotes/templates/quotes/: quote.html  result.html
test-files/: eo2zxlo8.dxf
