[tool.poetry]
name = "lasertime"
version = "0.1.0"
description = ""
authors = ["asher gray <asher@themakerspace.co.za>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dxf2svg = "^0.1.4"
svgpathtools = "^1.6.1"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
